fix #1231 submit button covers review

--- a/web/src/components/pages/contribution/contribution.css
+++ b/web/src/components/pages/contribution/contribution.css
@@ -203,6 +203,7 @@
     & .cards-and-pills {
         display: flex;
         flex-direction: column;
+        flex-shrink: 0;
 
         @media (--md-up) {
             flex-direction: row;
